--- a/CloneSuccess.html
+++ b/CloneSuccess.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-<title>Sample Web Page</title>
+<title>Sample Web application</title>
 </head>
 
 <body>
-<center><h1>I am making some changes to this web page</h1></center>
+<center><h1>I am making some changes to this web application</h1></center>
 </body>
 
 </html>
